k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: microdemo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev.microdemo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
